[package]
name = "tarkov-project"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.57"
inputbot = "0.5.1"
crossbeam-channel = "0.5"
external-memory-lib = { path = "../external-memory-lib" }
view = { path = "./src/view" }
domain = { path = "./src/domain" }

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "player_benchmark"
harness = false
